--- a/app/index.html
+++ b/app/index.html
@@ -1,16 +1,21 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" ng-app="NGT">
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="bower_components/bootstrap-css/css/bootstrap.min.css"/>
 </head>
 <body>
-
+    <div ng-view></div>
 
     <!-- Vendors -->
-    <script type="text/javascript" src="/app/bower_components/angular/angular.min.js"></script>
+    <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
+    <script src="http://cdn.firebase.com/v0/firebase.js"></script>
+    <script type="text/javascript" src="bower_components/angular-fire/angularfire.min.js"></script>
 
     <!-- JS -->
-    <script type="text/javascript" src="/app/js/app.js"></script>
+    <script type="text/javascript" src="js/app.js"></script>
+    <script type="text/javascript" src="js/routes.js"></script>
+    <script type="text/javascript" src="js/controllers/home.js"></script>
 </body>
 </html>
