--- a/app/index.html
+++ b/app/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap-css/css/bootstrap.min.css"/>
+    <link rel="stylesheet" type="text/css" href="css/main.css"/>
 </head>
 <body>
-    <div ng-view></div>
+    <div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+                <a class="navbar-brand" href="#">Angular Tweets</a>
+            </div>
+        </div>
+    </div>
+
+    <div class="container">
+        <div class="row">
+            <div ng-view></div>
+        </div>
+    </div>
+    
 
     <!-- Vendors -->
     <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
