Add some features, and start simplement tweet page

--- a/app/index.html
+++ b/app/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="NGT">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <title>Angular Tweets</title>
     <link rel="stylesheet" type="text/css" href="bower_components/bootstrap-css/css/bootstrap.min.css"/>
     <link rel="stylesheet" type="text/css" href="css/main.css"/>
 </head>
