--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,15 @@
 
     <!-- JS -->
     <script type="text/javascript" src="js/app.js"></script>
+
+    <!-- routes -->
     <script type="text/javascript" src="js/routes.js"></script>
+
+    <!-- factories -->
+    <script type="text/javascript" src="js/factories/firebase.js"></script>
+
+    <!-- controllers -->
     <script type="text/javascript" src="js/controllers/home.js"></script>
+    <script type="text/javascript" src="js/controllers/tweet.js"></script>
 </body>
 </html>
