--- a/app/index.html
+++ b/app/index.html
@@ -25,6 +25,7 @@
     <!-- Vendors -->
     <script type="text/javascript" src="bower_components/angular/angular.min.js"></script>
     <script src="http://cdn.firebase.com/v0/firebase.js"></script>
+    <script src="https://cdn.firebase.com/v0/firebase-simple-login.js"></script>
     <script type="text/javascript" src="bower_components/angular-fire/angularfire.min.js"></script>
 
     <!-- JS -->
